Fix issue where activate and save button would not be horizontally aligned at certain zoom levels

--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -26,5 +26,5 @@ label{
 #activate_form{
 	display: inline-block;
 	position: relative;
-	top: -2.48em;
+	top: -49px;
 }
